New support for news feeds from CNN
New support for news feeds from CNN

--- a/other-files/nginx/nginx.conf
+++ b/other-files/nginx/nginx.conf
@@ -26,6 +26,18 @@ http {
                proxy_ssl_server_name on;
                proxy_pass https://feeds.bbci.co.uk;
        }
+
+       # CNN News RSS Service handling:
+       location ~ /rss/.* {
+               proxy_ssl_verify        off;
+               proxy_ssl_session_reuse off;
+               proxy_ssl_server_name on;
+               #proxy_set_header Access-Control-Allow-Origin ‘*’;
+               #proxy_set_header Content-Type ‘application/json’;
+               #proxy_set_header Postman-Token ‘4ebc2eb3-4f0c-4c91-854e-005d3dd53f8a’;
+               #proxy_set_header x-api-key ‘XEReTahI8J64AgaQQpZO39a0Yxr8HHoD40ZGCZFF’;
+               proxy_pass http://rss.cnn.com;
+       }
        
        # Google Vision Service handling:       
        location /v1/images:annotate {
